# clipper

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: clipboard.rs  main.rs  stats.rs  tray.rs
